# gh-action-test

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  db.sql  gh_action_test.py  requirements-dev.txt  setup.cfg  t.py  test_noqa.py
.github/workflows/: build.yml
tests/: function_test.py
