[metadata]
name = gh_action_test
version = 0.0.0
description = test gh actions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theendlessriver13/test-gh-action
author = Jonas Kittner
author_email = theendlessriver13@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules =
    gh_action_test
install_requires =
    adafruit-circuitpython-gps>=3.6.0
    pyserial>=3.4
    importlib-metadata;python_version<"3.8"
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    sayhi = gh_action_test:main

[bdist_wheel]
universal = True
